@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-02T00:46:44Z",
+  "timestamp" : "2022-06-02T08:13:16Z",
   "count_outdated" : 1552,
   "uniques_outdated" : 85,
-  "count" : 1611,
-  "uniques" : 93,
+  "count" : 1615,
+  "uniques" : 94,
   "views" : [
     {
       "timestamp": "2022-05-19T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 4,
       "count_minmax": [ 2, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
