@@ -1,5 +1,5 @@
 {
-  "count": 59,
+  "count": 63,
   "uniques": 1,
   "views": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
+      "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
       "count": 4,
       "uniques": 1
     }
