@@ -1,3 +1,10 @@
+2022-06-02T08:13:16Z:
+* notice: last 14d: unq all: 1 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 85 1552 / 93 1611
+* notice: next accum: outdated-unq outdated-all / unq all: 85 1552 / 94 1615
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2022-06-02]
+
 2022-06-02T00:46:44Z:
 * notice: last 14d: unq all: 1 59
 * notice: prev accum: outdated-unq outdated-all / unq all: 84 1538 / 93 1608
